@@ -1,13 +1,14 @@
-package com.healthy.backend.service;
+package com.healthy.BackEnd.Service;
 
-import com.healthy.backend.dto.appointment.AppointmentResponse;
-import com.healthy.backend.dto.psychologist.PsychologistResponse;
-import com.healthy.backend.dto.student.StudentResponse;
-import com.healthy.backend.dto.survey.SurveyQuestionResultResponse;
-import com.healthy.backend.dto.survey.SurveyResultsResponse;
-import com.healthy.backend.dto.user.UsersResponse;
-import com.healthy.backend.entity.*;
-import com.healthy.backend.repository.*;
+import com.healthy.BackEnd.DTO.Appointment.AppointmentResponse;
+import com.healthy.BackEnd.DTO.Psychologist.PsychologistResponse;
+import com.healthy.BackEnd.DTO.Student.StudentResponse;
+import com.healthy.BackEnd.DTO.Survey.SurveyQuestionResultResponse;
+import com.healthy.BackEnd.DTO.Survey.SurveyResultsResponse;
+import com.healthy.BackEnd.DTO.User.UsersResponse;
+import com.healthy.BackEnd.Entity.*;
+import com.healthy.BackEnd.Exception.ResourceNotFoundException;
+import com.healthy.BackEnd.Repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -34,22 +35,22 @@ public class UserService {
 
     public List<UsersResponse> getAllUsers() {
         if (isEmpty()) {
-            throw new RuntimeException("No users found");
+            throw new ResourceNotFoundException("No users found");
         }
         return userRepository.findAllUsers().stream()
                 .map(this::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UsersResponse getUserById(String id) {
         Users user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
         return convert(user);
     }
 
     public UsersResponse updateUser(String userId, Users updatedUser) {
         Users existingUser = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId)); // APIExceptionHandle will catch this
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
 
         boolean hasChanges = false;
 
@@ -83,7 +84,7 @@ public class UserService {
 
     public List<SurveyResultsResponse> getUserSurveyResults(String userId) {
         Users user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
         return user.getRole() == Users.UserRole.STUDENT
                 ? buildSurveyResults(studentRepository.findByUserID(userId).getStudentID())
                 : null;
@@ -91,7 +92,7 @@ public class UserService {
 
     public void deleteUser(String id) {
         Users user = userRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + id));
         userRepository.delete(user);
     }
 
@@ -124,7 +125,7 @@ public class UserService {
     }
 
 
-    private AppointmentResponse buildAppointmentResponse(Users user, Appointments appointment) {
+    private AppointmentResponse buildAppointmentResponse(Users user,Appointments appointment) {
         return AppointmentResponse.builder()
                 .appointmentID(appointment.getAppointmentID())
                 .CreatedAt(appointment.getCreatedAt())
@@ -165,10 +166,10 @@ public class UserService {
                     Psychologists p = psychologistMap.get(a.getPsychologistID());
                     Students s = studentMap.get(a.getStudentID());
                     if (p == null) {
-                        throw new RuntimeException("No psychologist found with id " + a.getPsychologistID());
+                        throw new ResourceNotFoundException("No psychologist found with id " + a.getPsychologistID());
                     }
                     if (s == null) {
-                        throw new RuntimeException("No student found with id " + a.getStudentID());
+                        throw new ResourceNotFoundException("No student found with id " + a.getStudentID());
                     }
                     return buildAppointmentResponse(user, a);
                 })
@@ -181,7 +182,7 @@ public class UserService {
                 .collect(Collectors.groupingBy(result -> result.getQuestion().getSurveyID(),
                         Collectors.mapping(result -> {
                             Answers answer = answersRepository.findById(result.getAnswerID())
-                                    .orElseThrow(() -> new RuntimeException("No answer found with id " + result.getAnswerID()));
+                                    .orElseThrow(() -> new ResourceNotFoundException("No answer found with id " + result.getAnswerID()));
                             return SurveyQuestionResultResponse.builder()
                                     .questionId(result.getQuestionID())
                                     .categoryName(String.valueOf(result.getQuestion().getCategory().getCategoryName()))
@@ -195,7 +196,7 @@ public class UserService {
                 .stream()
                 .map(entry -> {
                     Surveys survey = surveyRepository.findById(entry.getKey())
-                            .orElseThrow(() -> new RuntimeException("No survey found with id " + entry.getKey()));
+                            .orElseThrow(() -> new ResourceNotFoundException("No survey found with id " + entry.getKey()));
                     return SurveyResultsResponse.builder()
                             .surveyId(survey.getSurveyID())
                             .surveyName(survey.getSurveyName())
@@ -228,6 +229,178 @@ public class UserService {
                 )
                 .createdAt(user.getCreatedAt())
                 .updatedAt(user.getUpdatedAt())
+                .build();
+    }
+
+    private UsersResponse convert_(Users user) {
+
+        Psychologists psychologist = new Psychologists();
+        Students student = new Students();
+        Parents parent = new Parents();
+        if (user.getRole() == Users.UserRole.PSYCHOLOGIST) {
+            psychologist = psychologistRepository.findByUserID(user.getUserId());
+        }
+        if (user.getRole() == Users.UserRole.PARENT) {
+            parent = parentRepository.findByUserID(user.getUserId());
+        }
+        if (user.getRole() == Users.UserRole.STUDENT) {
+            student = studentRepository.findByUserID(user.getUserId());
+        }
+        return UsersResponse.builder()
+                .userId(user.getUserId())
+                .fullName(user.getFullName())
+                .email(user.getEmail())
+                .phoneNumber(user.getPhoneNumber())
+                .gender(user.getGender().toString())
+                .role(user.getRole().toString())
+                .psychologistInfo(
+                        psychologist.getPsychologistID() == null ? null :
+                                PsychologistResponse.builder()
+                                        .psychologistId(psychologist.getPsychologistID())
+                                        .status(psychologist.getStatus().name())
+                                        .specialization(psychologist.getSpecialization())
+                                        .yearsOfExperience(psychologist.getYearsOfExperience())
+                                        .build()
+                )
+
+                .studentInfo(
+                        student.getStudentID() == null ? null :
+                                StudentResponse.builder()
+                                        .studentId(student.getStudentID())
+                                        .grade(student.getGrade())
+                                        .className(student.getClassName())
+                                        .schoolName(student.getSchoolName())
+                                        .depressionScore(student.getDepressionScore())
+                                        .anxietyScore(student.getAnxietyScore())
+                                        .stressScore(student.getStressScore())
+                                        .build()
+                )
+                .children(
+                        parent.getParentID() == null ? null :
+                                parent.getStudents().isEmpty()
+                                        ? Collections.emptyList() :
+                                        parent.getStudents().stream().map(s ->
+                                                StudentResponse.builder()
+                                                        .userId(s.getUserID())
+                                                        .studentId(s.getStudentID())
+                                                        .grade(s.getGrade())
+                                                        .className(s.getClassName())
+                                                        .fullName(s.getUser().getFullName())
+                                                        .surveyResults(
+                                                                surveyResultRepository.findByStudentID(s.getStudentID())
+                                                                        .stream()
+                                                                        .collect(Collectors.groupingBy(
+                                                                                result -> result.getQuestion().getSurveyID(),
+                                                                                Collectors.mapping(result -> {
+                                                                                    Answers answer = answersRepository.findById(result.getAnswerID())
+                                                                                            .orElseThrow(() -> new ResourceNotFoundException("No answer found with id " + result.getAnswerID()));
+                                                                                    return SurveyQuestionResultResponse.builder()
+                                                                                            .questionId(result.getQuestionID())
+                                                                                            .categoryName(String.valueOf(result.getQuestion().getCategory().getCategoryName()))
+                                                                                            .questionText(result.getQuestion().getQuestionText())
+                                                                                            .resultId(result.getResultID())
+                                                                                            .answerId(answer.getAnswerID())
+                                                                                            .answer(answer.getAnswer())
+                                                                                            .score(answer.getScore())
+                                                                                            .build();
+                                                                                }, Collectors.toList())))
+                                                                        .entrySet()
+                                                                        .stream()
+                                                                        .map(entry -> {
+                                                                            Surveys survey = surveyRepository.findById(entry.getKey())
+                                                                                    .orElseThrow(() -> new ResourceNotFoundException("No survey found with id " + entry.getKey()));
+                                                                            return SurveyResultsResponse.builder()
+                                                                                    .surveyId(survey.getSurveyID())
+                                                                                    .surveyName(survey.getSurveyName())
+                                                                                    .description(survey.getDescription())
+                                                                                    .questions(entry.getValue())
+                                                                                    .build();
+                                                                        })
+                                                                        .toList()
+                                                        )
+                                                        .build()
+                                        ).toList()
+                )
+                .appointmentsRecord(
+                        (psychologist.getPsychologistID() == null && student.getStudentID() == null) ? null :
+                                (
+                                        user.getRole() == Users.UserRole.STUDENT ?
+                                                appointmentRepository.findByStudentID(student.getStudentID()) :
+                                                appointmentRepository.findByPsychologistID(psychologist.getPsychologistID())
+                                ).stream()
+                                        .map(a -> {
+                                                    Psychologists p = psychologistRepository.findById(a.getPsychologistID())
+                                                            .orElseThrow(() -> new ResourceNotFoundException("No psychologist found with id" + a.getPsychologistID()));
+                                                    Students s = studentRepository.findById(a.getStudentID())
+                                                            .orElseThrow(() -> new ResourceNotFoundException("No student found with id" + a.getStudentID()));
+                                                    return AppointmentResponse.builder()
+                                                            .appointmentID(a.getAppointmentID())
+                                                            .CreatedAt(a.getCreatedAt())
+                                                            .MeetingLink(a.getMeetingLink())
+                                                            .Status(a.getStatus().name())
+                                                            .psychologistResponse(
+                                                                    user.getRole() == Users.UserRole.PSYCHOLOGIST ? null :
+                                                                            PsychologistResponse.builder()
+                                                                                    .psychologistId(p.getPsychologistID())
+                                                                                    .status(p.getStatus().name())
+                                                                                    .specialization(p.getSpecialization())
+                                                                                    .yearsOfExperience(p.getYearsOfExperience())
+                                                                                    .build()
+                                                            )
+                                                            .studentResponse(
+                                                                    user.getRole() == Users.UserRole.STUDENT ? null :
+                                                                            StudentResponse.builder()
+                                                                                    .studentId(s.getStudentID())
+                                                                                    .grade(s.getGrade())
+                                                                                    .className(s.getClassName())
+                                                                                    .schoolName(s.getSchoolName())
+                                                                                    .depressionScore(s.getDepressionScore())
+                                                                                    .anxietyScore(s.getAnxietyScore())
+                                                                                    .stressScore(s.getStressScore())
+                                                                                    .build())
+                                                            .Text(a.getNotes())
+                                                            .timeSlotID(a.getTimeSlotsID())
+                                                            .UpdatedAt(a.getUpdatedAt())
+                                                            .build();
+                                                }
+                                        ).toList()
+                )
+                .surveyResults(
+                        student.getStudentID() == null ? null :
+                                surveyResultRepository.findByStudentID(student.getStudentID())
+                                        .stream()
+                                        .collect(Collectors.groupingBy(
+                                                result -> result.getQuestion().getSurveyID(),
+                                                Collectors.mapping(result -> {
+                                                    Answers answer = answersRepository.findById(result.getAnswerID())
+                                                            .orElseThrow(() -> new ResourceNotFoundException("No answer found with id " + result.getAnswerID()));
+                                                    return SurveyQuestionResultResponse.builder()
+                                                            .questionId(result.getQuestionID())
+                                                            .categoryName(String.valueOf(result.getQuestion().getCategory().getCategoryName()))
+                                                            .questionText(result.getQuestion().getQuestionText())
+                                                            .resultId(result.getResultID())
+                                                            .answerId(answer.getAnswerID())
+                                                            .answer(answer.getAnswer())
+                                                            .score(answer.getScore())
+                                                            .build();
+                                                }, Collectors.toList())))
+                                        .entrySet()
+                                        .stream()
+                                        .map(entry -> {
+                                            Surveys survey = surveyRepository.findById(entry.getKey())
+                                                    .orElseThrow(() -> new ResourceNotFoundException("No survey found with id " + entry.getKey()));
+                                            return SurveyResultsResponse.builder()
+                                                    .surveyId(survey.getSurveyID())
+                                                    .surveyName(survey.getSurveyName())
+                                                    .description(survey.getDescription())
+                                                    .questions(entry.getValue())
+                                                    .build();
+                                        })
+                                        .toList()
+                )
+                .createdAt(user.getCreatedAt())
+                .updatedAt(user.getUpdatedAt())
+
                 .build();
     }
 }
